# DeepMimic

./: .gitignore  DeepMimic.py  DeepMimic.pyproj  DeepMimicRetargeting.py  DeepMimicTorch.py  DeepMimicTorch_Optimizer.py  DeepMimic_Optimizer.py  DeepMimic_Optimizer_xudong.py  DeepMimic_xudong.py  README.md  TrainSimpleAgent.py  autoencoder.py  batch_run.sh  check_vel_explode.sh  mpi_run.py
DeepMimicCore/: CMakeLists.txt  DeepMimicCore.cpp  DeepMimicCore.h  DeepMimicCore.sln  DeepMimicCore.vcxproj  DeepMimicCore.vcxproj.filters  DeepMimicCore_wrap.cpp  Main.cpp  Main_nodraw.cpp  Makefile  Makefile.dz  Makefile.left  Makefile.right  run_humanoid3d_backflip_args_for_core_debug.txt
DeepMimicCore/anim/: CMakeLists.txt  Character.cpp  Character.h  KinCharacter.cpp  KinCharacter.h  KinTree.cpp  KinTree.h  KinTreeDiff.cpp  Motion.cpp  Motion.h
DeepMimicCore/render/: CMakeLists.txt  Camera.cpp  Camera.h  DrawCharacter.cpp  DrawCharacter.h  DrawGround.cpp  DrawGround.h  DrawKinTree.cpp  DrawKinTree.h  DrawMesh.cpp  DrawMesh.h  DrawObj.cpp  DrawObj.h  DrawPerturb.cpp  DrawPerturb.h  DrawSimCharacter.cpp  DrawSimCharacter.h  DrawUtil.cpp  DrawUtil.h  DrawWorld.cpp  DrawWorld.h  GraphUtil.cpp  GraphUtil.h  IBuffer.cpp  IBuffer.h  MatrixStack.cpp  MatrixStack.h  MeshUtil.cpp  MeshUtil.h  OBJLoader.h  RenderState.h  Shader.cpp  Shader.h  ShadowMap.cpp  ShadowMap.h  TextureDesc.cpp  TextureDesc.h  TextureUtil.cpp  TextureUtil.h  VertexBuffer.cpp  (+1 more)
DeepMimicCore/render/lodepng/: lodepng.cpp  lodepng.h  lodepng_util.cpp  lodepng_util.h
DeepMimicCore/ret_opt/: CMakeLists.txt  Controller.h  DMRetController.h  NormalShapeMotionMemPool.cpp  NormalShapeMotionMemPool.h  RetOptImpl.cpp  RetOptImpl.h  ShapeMotionMemPool.cpp  ShapeMotionMemPool.h  cShapeMotionNode.cpp  cShapeMotionNode.h
DeepMimicCore/scenes/: CMakeLists.txt  DrawRLScene.cpp  DrawRLScene.h  DrawScene.cpp  DrawScene.h  DrawSceneDiffImitate.cpp  DrawSceneDiffImitate.h  DrawSceneImitate.cpp  DrawSceneImitate.h  DrawSceneKinChar.cpp  DrawSceneKinChar.h  DrawSceneSimChar.cpp  DrawSceneSimChar.h  RLScene.cpp  RLScene.h  RLSceneSimChar.cpp  RLSceneSimChar.h  Scene.cpp  Scene.h  SceneBuilder.cpp  SceneBuilder.h  SceneDiffImitate.cpp  SceneDiffImitate.h  SceneImitate.cpp  SceneImitate.h  SceneKinChar.cpp  SceneKinChar.h  SceneSimChar.cpp  SceneSimChar.h
DeepMimicCore/sim/: BuildIDSolver.cpp  BuildIDSolver.hpp  CMakeLists.txt  CharController.cpp  ContactManager.cpp  ContactManager.h  Controller.cpp  Controller.h  CtController.cpp  CtCtrlUtil.cpp  CtPDController.cpp  CtPDController.h  CtrlBuilder.cpp  DeepMimicCharController.cpp  DeepMimicCharController.h  DisplayIDSolver.cpp  DisplayIDSolver.hpp  Ground.h  IDSolver.cpp  IDSolver.hpp  ImpPDController.cpp  ImpPDController.h  InteractiveIDSolver.cpp  InteractiveIDSolver.hpp  MultiBody.cpp  ObjTracer.cpp  OfflineIDSolver.cpp  OfflineIDSolver.hpp  OfflineSolveIDSolver.cpp  OfflineSolveIDSolver.hpp  OnlineIDSolver.cpp  OnlineIDSolver.hpp  PerturbManager.cpp  RBDModel.cpp  RBDUtil.cpp  ReverseController.cpp  ReverseController.h  SampleIDSolver.cpp  SampleIDSolver.hpp  SimBodyJoint.cpp  (+28 more)
DeepMimicCore/sim/Controller/: CMakeLists.txt  CharController.cpp  CharController.h  Controller.cpp  Controller.h  CtController.cpp  CtController.h  CtCtrlUtil.cpp  CtCtrlUtil.h  CtPDController.cpp  CtPDController.h  CtPDFeaController.cpp  CtPDFeaController.h  CtPDGenController.cpp  CtPDGenController.h  CtVelController.cpp  CtVelController.h  CtrlBuilder.cpp  CtrlBuilder.h  DeepMimicCharController.cpp  DeepMimicCharController.h  ExpPDController.cpp  ExpPDController.h  ImpPDController.cpp  ImpPDController.h  ImpPDGenController.cpp  ImpPDGenController.h  PDController.cpp  PDController.h  RBDModel.cpp  RBDModel.h  RBDUtil.cpp  RBDUtil.h  ReverseController.cpp  ReverseController.h  SimbiconController.cpp  SimbiconController.h
DeepMimicCore/sim/IDSolver/: BuildIDSolver.hpp  DisplayIDSolver.cpp  DisplayIDSolver.hpp  IDSolver.cpp  IDSolver.hpp  InteractiveIDSolver.cpp  InteractiveIDSolver.hpp  OfflineSolveIDSolver.hpp  OnlineIDSolver.hpp  SampleIDSolver.cpp
DeepMimicCore/sim/RigidSystem/: BallJoint.cpp  BallJoint.h  FixedJoint.cpp  FixedJoint.h  HingeJoint.cpp  HingeJoint.h  LoboJointV2.cpp  LoboJointV2.h  LoboLink.cpp  LoboLink.h  MultiRigidBodyCore.h  MultiRigidBodyModel.cpp  MultiRigidBodyModel.h  MultiRigidBodyModelRender.cpp  MultiRigidBodyModelRender.h  UniversalJoint.cpp  UniversalJoint.h
DeepMimicCore/sim/SimItems/: MultiBody.cpp  MultiBody.h  SimBodyJoint.cpp  SimBodyJoint.h  SimBodyJointGen.cpp  SimBodyJointGen.h  SimBodyLink.cpp  SimBodyLink.h  SimBodyLinkGen.cpp  SimBodyLinkGen.h  SimBox.cpp  SimBox.h  SimCapsule.cpp  SimCapsule.h  SimCharBuilder.cpp  SimCharBuilder.h  SimCharGeneral.cpp  SimCharGeneral.h  SimCharacter.cpp  SimCharacter.h  SimCharacterBase.cpp  SimCharacterBase.h  SimCharacterGen.cpp  SimCharacterGen.h  SimCylinder.cpp  SimCylinder.h  SimJoint.cpp  SimJoint.h  SimObj.cpp  SimObj.h  SimPlane.cpp  SimPlane.h  SimRigidBody.cpp  SimRigidBody.h  SimSphere.cpp  SimSphere.h  SpAlg.cpp  SpAlg.h
DeepMimicCore/sim/TrajManager/: BuildIDSolver.cpp  BuildIDSolver.h  CMakeLists.txt  DisplayIDSolver.cpp  DisplayIDSolver.h  IDFeaSolver.cpp  IDGenSolver.cpp  IDSolver.cpp  IDSolver.h  IDSolver.hpp  InteractiveIDSolver.cpp  InteractiveIDSolver.hpp  OfflineFeaIDSolver.cpp  OfflineFeaIDSolver.h  OfflineGenIDSolver.cpp  OfflineGenIDSolver.h  OfflineIDSolver.cpp  OfflineIDSolver.h  OfflineSolveIDSolver.cpp  OfflineSolveIDSolver.h  OnlineIDSolver.cpp  OnlineIDSolver.h  OnlineIDSolver.hpp  SampleIDSolver.cpp  SampleIDSolver.h  SampleIDSolver.hpp  (+4 more)
DeepMimicCore/util/: Annealer.cpp  Annealer.h  ArgParser.cpp  ArgParser.h  BVHReader.cpp  BVHReader.h  BulletUtil.cpp  BulletUtil.h  CMakeLists.txt  CircularBuffer.h  FileUtil.cpp  FileUtil.h  IndexBuffer.h  IndexManager.cpp  IndexManager.h  JsonUtil.cpp  JsonUtil.h  LogUtil.cpp  LogUtil.h  LogUtil.hpp  MPIUtil.cpp  MPIUtil.h  MathUtil.cpp  MathUtil.h  Rand.h  TimeUtil.cpp  TimeUtil.hpp  Timer.cpp  Timer.h  Trajectory.cpp  Trajectory.h  cTimeUtil.cpp  cTimeUtil.hpp
(+1431 files in other folders)
